[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/Tileset Completo 4.png" type="Texture" id=1]
[ext_resource path="res://src/Switch.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 4.44129 )

[node name="Switch" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="SwitchUp" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 64, 192, 16, 32 )

[node name="SwitchCenter" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 64, 160, 16, 32 )

[node name="SwitchDown" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 64, 224, 16, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Piso" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso"]
position = Vector2( 0, 20.5 )
shape = SubResource( 2 )
